--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
   </style>
 </head>
 <body>
+	<label for="fname">Password:</label>
+<input type="text" id="fname" name="fname">
+
+<h1>document.getElementById('fname').value</h1>
+
 <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
