--- a/index.html
+++ b/index.html
@@ -53,12 +53,20 @@
   <script type="text/javascript">
   	function myFunction()
 {var x=document.getElementById("fname").value;
- if(x.length>=1)
+ if(x.length != "nancydrew425")
  {
-document.getElementById("TESTING").style.visibility="visible";
+document.getElementById("TESTING").style.visibility="hidden";
+document.getElementById("TESTING2").style.visibility="hidden";
+document.getElementById("TESTING3").style.visibility="hidden";
+document.getElementById("TESTING4").style.visibility="hidden";
+document.getElementById("TESTING5").style.visibility="hidden";
  }
 else
-document.getElementById("TESTING").style.visibility = 'hidden';
+document.getElementById("TESTING").style.visibility = 'visible';
+document.getElementById("TESTING2").style.visibility = 'visible';
+document.getElementById("TESTING3").style.visibility = 'visible';
+document.getElementById("TESTING4").style.visibility = 'visible';
+document.getElementById("TESTING5").style.visibility = 'visible';
 
 }
   </script>
@@ -78,7 +86,7 @@ document.getElementById("TESTING").style.visibility = 'hidden';
     </div>
   </div>
 </div>
-<div class="flip-card">
+<div class="flip-card" id="TESTING2">
   <div class="flip-card-inner">
     <div class="flip-card-front">
       <img src="https://opengameart.org/sites/default/files/card%20back%20red.png" alt="Avatar" style="width:300px;height:400px;">
@@ -88,7 +96,7 @@ document.getElementById("TESTING").style.visibility = 'hidden';
     </div>
   </div>
 </div>
-<div class="flip-card">
+<div class="flip-card" id="TESTING3">
   <div class="flip-card-inner">
     <div class="flip-card-front">
       <img src="https://opengameart.org/sites/default/files/card%20back%20red.png" alt="Avatar" style="width:300px;height:400px;">
@@ -98,7 +106,7 @@ document.getElementById("TESTING").style.visibility = 'hidden';
     </div>
   </div>
 </div>
-<div class="flip-card">
+<div class="flip-card" id="TESTING4">
   <div class="flip-card-inner">
     <div class="flip-card-front">
       <img src="https://opengameart.org/sites/default/files/card%20back%20red.png" alt="Avatar" style="width:300px;height:400px;">
@@ -108,7 +116,7 @@ document.getElementById("TESTING").style.visibility = 'hidden';
     </div>
   </div>
 </div>
-<div class="flip-card">
+<div class="flip-card" id="TESTING5">
   <div class="flip-card-inner">
     <div class="flip-card-front">
       <img src="https://opengameart.org/sites/default/files/card%20back%20red.png" alt="Avatar" style="width:300px;height:400px;">
