--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <script type="text/javascript">
   	function myFunction()
 {var x=document.getElementById("fname").value;
- if(x.length != "nancydrew425")
+ if(x != "nancydrew425")
  {
 document.getElementById("TESTING").style.visibility="hidden";
 document.getElementById("TESTING2").style.visibility="hidden";
