--- a/index.html
+++ b/index.html
@@ -55,18 +55,18 @@
 {var x=document.getElementById("fname").value;
  if(x != "nancydrew425")
  {
-document.getElementById("TESTING").style.visibility="hidden";
-document.getElementById("TESTING2").style.visibility="hidden";
-document.getElementById("TESTING3").style.visibility="hidden";
-document.getElementById("TESTING4").style.visibility="hidden";
-document.getElementById("TESTING5").style.visibility="hidden";
+document.getElementById("TESTING").style.visibility="hidden"
+document.getElementById("TESTING2").style.visibility="hidden"
+document.getElementById("TESTING3").style.visibility="hidden"
+document.getElementById("TESTING4").style.visibility="hidden"
+document.getElementById("TESTING5").style.visibility="hidden"
  }
 else
-document.getElementById("TESTING").style.visibility = 'visible';
-document.getElementById("TESTING2").style.visibility = 'visible';
-document.getElementById("TESTING3").style.visibility = 'visible';
-document.getElementById("TESTING4").style.visibility = 'visible';
-document.getElementById("TESTING5").style.visibility = 'visible';
+document.getElementById("TESTING").style.visibility = 'visible'
+document.getElementById("TESTING2").style.visibility = 'visible'
+document.getElementById("TESTING3").style.visibility = 'visible'
+document.getElementById("TESTING4").style.visibility = 'visible'
+document.getElementById("TESTING5").style.visibility = 'visible'
 
 }
   </script>
