--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ elems[i].style.display = 'inline';
 }
   </script>
 </head>
-<body>
+<body onload = "myFunction()">
 	<label for="fname">Password:</label>
 <input type="text" id="fname" name="fname" onchange="myFunction();">
 
