--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@ elems[i].style.display = 'inline';
 </head>
 <body onload = "myFunction()">
 	<label for="fname">Password:</label>
-<input type="text" id="fname" name="fname" onchange="myFunction();">
+<input type="text" id="fname" name="fname" >
+<button onclick="myFunction()">Go</button>
 
 
 <div class="flip-card" name="TESTING">
