--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ elems[i].style.display = 'inline';
 }
   </script>
 </head>
-<body onload = "myFunction()">
+<body style="background-color:#ADD8E6;" onload = "myFunction()">
 	<label for="fname">Password:</label>
 <input type="text" id="fname" name="fname" >
 <button onclick="myFunction()">Go</button>
@@ -106,7 +106,7 @@ elems[i].style.display = 'inline';
       <img src="https://opengameart.org/sites/default/files/card%20back%20red.png" alt="Avatar" style="width:300px;height:400px;">
     </div>
         <div class="flip-card-back">
-      <img src="https://i.imgur.com/XQseV3n.png" alt="Avatar" style="width:300px;height:400px;">
+      <img src="https://i.imgur.com/sro5Z62.png" alt="Avatar" style="width:300px;height:400px;">
     </div>
   </div>
 </div>
